--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="http://d3js.org/topojson.v1.min.js"></script>
-    <script src="../src/index.js"></script>
+    <script src="./src/index.js"></script>
   </body>
 </html>
