--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
   </head>
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-    <script src="https://d3js.org/d3.v5.min.js"></script>
-    <script src="http://d3js.org/topojson.v1.min.js"></script>
-    <script src="./src/index.js"></script>
+    <script src="./dist/main.js"></script>
   </body>
 </html>
